# effy

./: .gitignore  Cargo.toml  LICENSE  README.md  mprocs.yaml  zensical.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  parameter-request.md
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  index.md  install.md  keys.md  usage.md
docs/params/: audio-bitrate.md  audio-crystalizer.md  audio-pitch.md  audio-volume.md  disable-audio.md  hardware-acceleration.md  output-format.md  speed.md  trim.md  video-bitrate.md  video-frame-rate.md  video-scale.md
docs/site/: extra.css
src/: app.rs  info.rs  logging.rs  main.rs  model.rs  source.rs  ui.rs
src/params/: audio_bitrate.rs  audio_crystalizer.rs  audio_pitch.rs  audio_volume.rs  disable_audio.rs  finalizer.rs  hardware_acceleration.rs  macros.rs  mod.rs  output_format.rs  parameter.rs  speed_factor.rs  trim.rs  video_bitrate.rs  video_frame_rate.rs  video_scale.rs
src/ui/: app_ui.rs  mod.rs  modal.rs  modal_alert.rs  modal_custom_select.rs  modal_help.rs  modal_save_as_file.rs  modal_trim.rs  theme.rs
src/ui/modal/: alert.rs  copy.rs  custom_select.rs  help.rs  mod.rs  save_as_file.rs  trim.rs
src/ui/state/: info_pane_state.rs  mod.rs  output_pane_state.rs
src/ui/widget/: bg_clear.rs  info_pane.rs  mod.rs  output_pane.rs  tab.rs
src/visitors/: command_builder.rs  mod.rs  preset_applier.rs  preset_saver.rs  visitor_context.rs
