[package]
name = "effy"
version = "0.2.1"
description = "FFmpeg TUI Helper"
keywords = ["ffmpeg", "tui", "ratatui"]
authors = ["aNNiMON <annimon119@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = { version = "0.14.0", features = ["crossterm"], default-features = false }
