[package]
name = "effy"
version = "0.6.0"
description = "A small and friendly terminal FFmpeg helper that simplifies common tasks"
keywords = ["ffmpeg", "tui", "ratatui"]
authors = ["aNNiMON <annimon119@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/aNNiMON/effy"
homepage = "https://projects.annimon.com/projects/effy"
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"
exclude = ["mprocs.yaml"]

[dependencies]
crossterm = "0.29"
ratatui = "0.30.0"
regex = { version = "1.12.2", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = { version = "0.15.0", features = ["crossterm"], default-features = false }

[profile.release]
strip = true
opt-level = "s"
lto = true
