[package]
name = "effy"
version = "0.7.2"
description = "A small and friendly terminal FFmpeg helper that simplifies common tasks"
keywords = ["ffmpeg", "tui", "ratatui"]
authors = ["aNNiMON <annimon119@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/aNNiMON/effy"
homepage = "https://projects.annimon.com/projects/effy"
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"
exclude = ["mprocs.yaml"]

[dependencies]
arboard = { version = "3.6.1", default-features = false }
crossterm = "0.29"
ratatui = "0.30.0"
regex = { version = "1.12.2", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = { version = "0.15.0", features = ["crossterm"], default-features = false }

[profile.release]
codegen-units = 1
strip = true
opt-level = "s"
lto = true
